--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,23 @@
 
 /* COGS3 studyBuddy specific styles go here. */
 #title {
-    background-color: #8fdbf2;
+    background-color: #D6B588;
+}
+
+#title .row {
+    display: flex;
+    align-items: center;
+}
+
+#title .col-lg-6 {
+    text-align: center;
+}
+
+.title-image {
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    transform: rotate(5deg);
 }
 
 h1 {
@@ -34,13 +50,6 @@ h1 {
     font-weight: bold;
     font-size: 3rem;
     line-height: 1.5;
-}
-
-.title-image {
-    width: 70%;
-    max-width: 100%;
-    margin: auto;
-    transform: rotate(5deg);
 }
 
 #features {
@@ -88,4 +97,31 @@ h1 {
 
 .check-icon:hover {
     color: darkgreen;
+}
+
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: beige;
+}
+
+#testimonials h2 {
+    font-family: Georgia, serif;
+    font-weight: bold; 
+}
+
+.testimonials-image {
+    width: 20%;
+    border-radius: 50%;
+    margin: 10px;
+}
+
+#press {
+    background-color: beige;
+    text-align: center;
+}
+
+.press-logo {
+    width: 25%;
+    margin: 40px;
 }
